--- a/k8s-dashboard.yaml
+++ b/k8s-dashboard.yaml
@@ -7,7 +7,7 @@
 # Download
 # wget https://raw.githubusercontent.com/murrayhenwood/k8s-quickstart/master/k8s-dashboard.yaml
 # Apply
-# kubectl apply --validate=false -f k8s-dashboard.yaml
+# kubectl apply -f k8s-dashboard.yaml
 # Remove
 # kubectl delete -f k8s-dashboard.yaml
 
