--- a/metrics-server-deployment.yaml
+++ b/metrics-server-deployment.yaml
@@ -9,7 +9,24 @@
 # kubectl apply -f metrics-server-deployment.yaml
 # Remove
 # kubectl delete -f metrics-server-deployment.yaml
+---
 
+apiVersion: v1
+kind: Service
+metadata:
+  name: metrics-server
+  namespace: kube-system
+  labels:
+    addonmanager.kubernetes.io/mode: Reconcile
+    kubernetes.io/cluster-service: "true"
+    kubernetes.io/name: "Metrics-server"
+spec:
+  selector:
+    k8s-app: metrics-server
+  ports:
+  - port: 443
+    protocol: TCP
+    targetPort: https
 
 ---
 apiVersion: v1
