--- a/k8s-dashboard-metrics-server.yaml
+++ b/k8s-dashboard-metrics-server.yaml
@@ -93,6 +93,8 @@ spec:
         args:
           - --cert-dir=/tmp
           - --secure-port=4443
+          - --kubelet-insecure-tls=true
+          - --kubelet-preferred-address-types=InternalIP
         ports:
         - name: main-port
           containerPort: 4443
